change the scroll snap align to try to fix scrolling in home-page

--- a/src/styles/pages/Home.scss
+++ b/src/styles/pages/Home.scss
@@ -13,7 +13,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  scroll-snap-align: start;
+  scroll-snap-align: end;
 }
 
 .hero-section2 {
